chore：引入第三方依赖

--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "echarts": "^5.0.0",
     "element-ui": "^2.15.0",
     "lodash": "^4.17.20",
+    "resize-detector": "^0.2.2",
+    "shortid": "^2.2.16",
     "vue": "^2.5.2",
+    "vue-echarts": "^5.0.0-beta.0",
     "vue-router": "^3.5.1"
   },
   "devDependencies": {
